# F_diamond.io

./: README.md
diamond-io/: Cargo.toml  LICENSE  README.md  build.rs  cloud-init.sh  justfile  memory_profile.py  monitor_cpu.sh  pyproject.toml  run.sh
diamond-io/benches/: README.md  dcrtmatrix.rs  dcrtpoly.rs
diamond-io/dio/: Cargo.toml  README.md  build.rs
diamond-io/dio/src/: circuit.rs  config.rs  main.rs
diamond-io/e2e/: dio-config.1.toml  dio-config.10.toml  dio-config.13.toml  dio-config.14.toml  dio-config.15.toml  dio-config.16.toml  dio-config.17.toml  dio-config.18.toml  dio-config.19.toml  dio-config.2.toml  dio-config.20.toml  dio-config.21.toml  dio-config.22.toml  dio-config.3.toml  dio-config.4.toml  dio-config.5.toml  dio-config.6.toml  dio-config.7.toml  dio-config.8.toml  dio-config.dummy.toml
diamond-io/proptest-regressions/poly/dcrt/sampler/: hash.txt  uniform.txt
diamond-io/simulator/: circuit_test.json  environment.yml  main.py  norms.py  requirements.txt
diamond-io/src/: lib.rs  test_utils.rs  utils.rs
diamond-io/src/bgg/: digits_to_int.rs  encoding.rs  mod.rs  norm_simulator.rs  public_key.rs  sampler.rs
diamond-io/src/bgg/circuit/: eval.rs  gate.rs  mod.rs  serde.rs  utils.rs
diamond-io/src/io/: bgm.rs  eval.rs  mod.rs  obf.rs  params.rs  serde.rs  utils.rs
diamond-io/src/poly/: element.rs  enc.rs  matrix.rs  mod.rs  poly_matrix.rs  polynomial.rs  sampler.rs
diamond-io/src/poly/dcrt/: cpp_matrix.rs  element.rs  mod.rs  params.rs  poly.rs
diamond-io/src/poly/dcrt/matrix/: dcrt_poly.rs  i64.rs  mod.rs
diamond-io/src/poly/dcrt/matrix/base/: disk.rs  memory.rs  mod.rs
diamond-io/src/poly/dcrt/sampler/: hash.rs  mod.rs  uniform.rs
diamond-io/src/poly/dcrt/sampler/trapdoor/: mod.rs  sampler.rs  utils.rs
diamond-io/tests/: test_bgg_pubkey.rs  test_io_dummy_param.rs  test_io_dummy_param_width.rs  test_io_middle_param.rs  test_io_real_param.rs
