[workspace]
resolver = "2"
members = [".", "dio"]

[package]
name = "diamond-io"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"

[features]
default = ["debug"]
debug = []
bgm = ["rodio", "reqwest"]
disk = ["tempfile", "libc", "memmap2"]
cpu = []

[dependencies]
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
futures = "0.3"
libc = { version = "0.2", optional = true }
openfhe = { git = "https://github.com/MachinaIO/openfhe-rs.git", branch = "exp/reimpl_trapdoor" }
digest = "0.10"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
rayon = { version = "1.5" }
rand = { version = "0.9.0", features = ["std_rng"] }
itertools = "0.14.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bitvec = "1"
memory-stats = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = { git = "https://github.com/RustAudio/rodio.git", optional = true }
memmap2 = { version = "0.9.5", optional = true }
tempfile = { version = "3.19.1", optional = true }
sysinfo = "0.34.1"
once_cell = "1.21.1"
rand_distr = "0.5.1"
dashmap = "6.1.0"
keccak-asm = { version = "0.1.4" }
walkdir = "2"

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.5.0"
serial_test = "3.2.0"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "abort"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"


[[bench]]
name = "dcrtpoly"
harness = false

[[bench]]
name = "dcrtmatrix"
harness = false
